--- a/app/src/main/res/layout/fragment_myinfo.xml
+++ b/app/src/main/res/layout/fragment_myinfo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_sun"
+    android:background="@color/yellow6"
     android:orientation="vertical"
     tools:context=".ui.myinfo.MyinfoFragment">
     <!--   我的信息页面 -->
@@ -18,122 +18,108 @@
         android:paddingTop="50dp">
         <ImageView
             android:id="@+id/myinfo_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@drawable/eg_boy"
             android:layout_marginTop="10dp"/>
-        <TextView
-            android:id="@+id/myinfo_name"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:paddingLeft="20dp"
-            android:paddingTop="34dp"
-            android:text="用户名"
-            android:textSize="18dp" />
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/reset_name"
-                android:layout_height="25dp"
-                android:layout_width="25dp"
-                android:layout_marginTop="35dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
-                android:src="@drawable/rectify"
-                />
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/myinfo_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="用户名"
+                    android:textSize="22dp" />
+                <ImageView
+                    android:id="@+id/reset_name"
+                    android:layout_height="25dp"
+                    android:layout_width="25dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/rectify"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/myinfo_auth"
+                    android:layout_width="90dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/circlebutton"
+                    android:elevation="10dp"
+                    android:gravity="center"
+                    android:text="已实名"
+                    android:textColor="@color/white"
+                    android:textSize="18dp" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="18dp">
-            <TextView
-                android:id="@+id/myinfo_auth"
-                android:layout_width="90dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/circlebutton"
-                android:elevation="10dp"
-                android:gravity="center"
-                android:text="已实名"
-                android:textColor="@color/white"
-                android:textSize="16dp" />
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/myinfo_row"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:src="@drawable/myinfoo" />
+        android:layout_height="60dp"
+        android:background="@color/yellow_1"
+        android:orientation="vertical">
         <TextView
-            android:layout_width="270dp"
-            android:layout_height="45dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:gravity="center"
-            android:text="我的信息"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:paddingLeft="10dp"
-            android:src="@drawable/into"
-            />
+            android:layout_gravity="center"
+            android:text="我  的  信  息"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:src="@color/grey" />
 
     <LinearLayout
         android:id="@+id/myfind_row"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/white"
+        android:layout_height="60dp"
+        android:background="@color/yellow3"
         android:orientation="horizontal"
+        android:layout_marginTop="5dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
         <ImageView
             android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:src="@drawable/lingdang" />
         <TextView
-            android:layout_width="270dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center"
             android:gravity="center"
             android:text="我的寻人信息"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="22sp" />
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:paddingLeft="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:src="@drawable/into"
             />
     </LinearLayout>
@@ -141,87 +127,74 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:src="@color/grey" />
 
     <LinearLayout
         android:id="@+id/myrelative_row"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/white"
+        android:layout_height="60dp"
+        android:background="@color/yellow3"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
         <ImageView
             android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:src="@drawable/evenlope" />
         <TextView
-            android:layout_width="270dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center"
             android:gravity="center"
             android:text="我的寻亲信息"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="22sp" />
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:paddingLeft="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:src="@drawable/into" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:src="@color/grey" />
 
     <LinearLayout
         android:id="@+id/myclue_row"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/white"
+        android:layout_height="60dp"
+        android:background="@color/yellow3"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
         <ImageView
             android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:src="@drawable/clue" />
         <TextView
-            android:layout_width="270dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            android:text="我提供的有关线索"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-        <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:paddingLeft="10dp"
-            android:src="@drawable/into"
-            />
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="我提供的线索"
+            android:textColor="@color/black"
+            android:textSize="22sp" />
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:src="@drawable/into" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:src="@color/grey" />
 
     <!--    <LinearLayout-->
@@ -282,13 +255,13 @@
         <TextView
             android:id="@+id/myinfo_logout"
             android:layout_width="320dp"
-            android:layout_height="45dp"
+            android:layout_height="60dp"
             android:background="@drawable/log_out"
             android:elevation="10dp"
             android:gravity="center"
-            android:text="登出"
+            android:text="登      出"
             android:textColor="@color/white"
-            android:textSize="16dp" />
+            android:textSize="24sp" />
 
     </LinearLayout>
 
