--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
 
     <color name="sun">#FFD159</color>
     <color name="heavy_sun">#E6BC50</color>
+    <color name="yellow_1">#ffd56a</color>
+    <color name="yellow0">#ffe195</color>
     <color name="yellow1">#fef2d3</color>
     <color name="yellow2">#fef5d9</color>
     <color name="yellow3">#fdf8ea</color>
